--- a/exercise_1/index.html
+++ b/exercise_1/index.html
@@ -12,7 +12,7 @@
         <h1 id="greeting">Hello Student</h1>
         <p id="primeInfo" class="alert alert-info"></p>
         <table id="nPrimes" class="table table-striped">
-            <thead></thead>
+            <thead class="head"> Prime numbers</thead>
             <tbody></tbody>
         </table>
     </body>
