--- a/exercise_1/primes.html
+++ b/exercise_1/primes.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <div id="warnings"></div>
-        <h1 id="greeting"></h1>
+        <h1 id="greeting" class="h1"></h1>
         <p id="primeInfo" class="alert alert-info"></p>
         <table id="nPrimes" class="table table-striped">
             <thead class="head"></thead>
-            <tbody></tbody>
+            <tbody> </tbody>
         </table>
     </body>
 </html>
