--- a/projects/calculator/calculator.html
+++ b/projects/calculator/calculator.html
@@ -3,9 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/calculator.css" type="text/css">
     <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/calculator.js" type="text/javascript"></script>
 </head>
 
 <body>
