--- a/exercises/todo_list/index.html
+++ b/exercises/todo_list/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>TODO list</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" type = "text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body> 
@@ -11,37 +12,37 @@
         <h1>TODO List</h1>
         <div class="container">
             <form id="newTask">
-            <div>
-                <div>
-                    <label for="title">Task</label>
+            <div class = "form-inline">
+                <div >
+                    <label for="title" class="form1">Task</label>
                     <input id="title" required />
                 </div>
 
                 <div>
-                    <label for="assignedTo">Assigned to</label>
-                    <select id="assignedTo"></select>
+                    <label for="assignedTo" class="form2">Assigned to</label>
+                    <select id="assignedTo" class="btn btn-secondary"></select>
                 </div>
 
                 <div>
-                    <label for="priority">Priority</label>
-                    <select id="priority"></select>
+                    <label for="priority" class="form3">Priority</label>
+                    <select id="priority" class="btn btn-success"></select>
                 </div>
 
                 <div>
-                    <label for="dueDate">Due date</label>
-                    <input id="dueDate" required />
+                    <label for="dueDate" class="form4">Due date</label>
+                    <input id="dueDate" type= "date" class="btn btn-warning"required />
                 </div>
             </div>
             <div>
-                <button type="button" id="addTaskBtn" onclick="addTask()">Add task</button>
+                <button type="button" id="addTaskBtn" onclick="addTask()"class= "btn btn-secondary">Add task</button>
             </div>
         </form>
     </div>
     </div>
 
     <div class="container">
-        <table id="taskList">
-            <thead>
+        <table id="taskList" class= "table">
+            <thead class = "thead-light">
                 <tr>
                     <th></th>
                     <th>Task</th>
