--- a/exercises/todo_list/index.html
+++ b/exercises/todo_list/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <form id="newTask">
             <div class = "form-inline">
-                <div >
+                <div>
                     <label for="title" class="form1">Task</label>
                     <input id="title" required />
                 </div>
@@ -25,7 +25,7 @@
 
                 <div>
                     <label for="priority" class="form3">Priority</label>
-                    <select id="priority" class="btn btn-success"></select>
+                    <select id="priority" ></select>
                 </div>
 
                 <div>
