--- a/projects/list_of_stuff/index.html
+++ b/projects/list_of_stuff/index.html
@@ -1,21 +1,50 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>List of stuff</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael Musa Investment Portofolio</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" type = "text/css" href="css/style.css">
 </head>
-
 <body>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/model.js"></script>
-    <script type="text/javascript" src="js/view.js"></script>
-    <script type="text/javascript" src="js/controller.js"></script>
-</body>
+    <h1>Investment Portofolio</h1>
+    <form id=newStock class="form-group needs-validation">
+        <div class="organization">
+        <select name="stock" id="stockOptions" class="btn btn-secondary dropdown-toggle">
+        </select>
+        <input type="number" name="costPerShare" placeholder = "Cost Per Share" id="costPS" min="0" max="100000" step = "0.01" class="input-field" required>
+        <input type="number" name="moneyInvested" placeholder = "Money Invested"id="moneyI" min="0.00" max="100000.00" step = "0.01" class="input-field" required>
+        <select name="chart" id="CurrentChartPattern" class="btn btn-secondary dropdown-toggle">
+        </select>
+        <select name="chart" id="InvestmentTerm" class="btn btn-secondary dropdown-toggle">
+        </select>
+        </div>
+        <div class = "btnorganization">
+        <button type="button" id="btnAdd" class="btn btn-success" onclick="addStock()">Add Stock</button>
+        </div>
+        <div class = "btnorganization">
+        <button type="button" id="btnLoad" class="btn btn-secondary" onclick="loadStock()">Load Stock</button>
+        </div>
+         <div class = "btnorganization">
+        <button type="button" id="btnRemoveAll" class="btn btn-danger" onclick="removeAllStocks()">Remove All Stocks</button>
+        <button type="button" id="removeSelected" class="btn btn-danger" onclick="removeStock()">Remove Selected Stock</button>
+        </div>
+        
+        
+    </form>
+    <table id="tblAllStocks" class="table table-striped">
+        <thead class = "thead-dark">
+            <th> </th><th>Stock Name</th><th>Cost Per Share ($)</th><th>Money Invested($)</th><th>Chart Pattern </th><th>Investment Term </th>
+        </thead>
+        <tbody></tbody>
+    </table>
 
+    <script src="js/bootstrap.bundle.min.js"></script> 
+    <script src="js/model.js"></script>
+    <script src="js/view.js"></script>
+    <script src="js/controller.js"></script>
+</body>
 </html>
