--- a/exercises/promises/index.html
+++ b/exercises/promises/index.html
@@ -1,26 +1,25 @@
 <html>
-
 <head>
     <title>Numbers</title>
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" type = "text/css">
 </head>
 
 <body>
     <div>
         <form id=form_number>
-            <div>
-                <div>
-                    <label for="number">Enter a number</label>
+            <div class= "organization">
+                <div class = "control">
+                    <label for="number" class = "text">Enter a number</label>
                     <input type="text" id="number" class="form-text" placeholder="Enter a number" />
                 </div>
-                <div>
-                    <label for="getThem">Click a button</label>
-                    <button type=button id="getInfo" onclick="clickedon()">Get Info!</button>
+                <div class = "control">
+                    <label for="getThem" class = "text">Click a button</label>
+                    <button type=button id="getInfo" class= "btn btn-primary"onclick="clickedon()">Get Info!</button>
                 </div>
-                <div>
-                    <label for=batch>Check a box to get 3 numbers at once</label>
+                <div class = "control">
+                    <label for=batch class = "text">Check a box to get 3 numbers at once</label>
                     <input type="checkbox" value="" id="batch">
                 </div>
             </div>
