--- a/projects/mashup/index.html
+++ b/projects/mashup/index.html
@@ -30,7 +30,7 @@
                         <button type=button id="clearAllCharacters" class= "btn btn-dark"onclick="clearCharacters()">Clear All Characters</button>
                 </div>
                 <div class = "control">
-                        <button type=button id="loadAllSavedCharacters" class= "btn btn-dark"onclick="loadCharacters()">Load Saved Characters</button>
+                        <button type=button id="loadAllSavedCharacters" class= "btn btn-dark"onclick="loadCharacters()">Load Recent Characters</button>
                 </div>
             </div>
         </form>
