--- a/projects/jokes_api/client/index.html
+++ b/projects/jokes_api/client/index.html
@@ -22,7 +22,7 @@
             <div>
                 <div class = "org" style = "display:inline; margin-left:45px; padding: 45px">
                     <label for="selCat" value="Category">Category</label>
-                    <select name="category" id="selCat" class = "btn btn-dark">
+                    <select name="category" id="selCat" class = "btn btn-dark" class="input-field" required>
                         <option value="all">All</option>
                         <option value="neutral">Neutral</option>
                         <option value="chuck">Chuck</option>
