--- a/projects/jokes_api/client/index.html
+++ b/projects/jokes_api/client/index.html
@@ -8,14 +8,22 @@
 
 <body>
     <div>
-        <div><a href="/">Home</a></div>
-        <div class = "imgContainer">
-        <img class="cropped" style = "width:100%; height:50%; object-fit:cover;"src="https://i.pinimg.com/originals/24/c0/6b/24c06b12f265e3998862c16c2d490a6a.jpg" alt="people laughing" width = "100%" height = "100%">
-        </div>
+        <br>
         <div>
-            <h2 style = "background-color: antiquewhite; color: black;text-align: center;">
-    
-    Pick the category, language, number of jokes to hear or the id of the joke</h2>
+            <h2 style = "color: black;text-align: center; font-size:xx-large;">
+            <span style="color:blue">G</span>
+            <span style="color:red">O</span>
+            <span style="color:yellow">O</span>
+            <span style="color:blue">G</span>
+            <span style="color:green">L</span>
+            <span style="color:red">E</span>
+            <span>&nbsp</span>
+            <span style="color:blue"> J</span>
+            <span style="color:red">O</span>
+            <span style="color:yellow">K</span>
+            <span style="color:blue">E</span>
+            <span style="color:green">S</span>
+            </h2>
         </div>
         <br>
         <form method="GET" action="">
