--- a/projects/jokes_api/client/index.html
+++ b/projects/jokes_api/client/index.html
@@ -9,71 +9,66 @@
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
-<body>
+<body style = "background: rgba(46, 182, 255, 0.2);">
     <br>
     <div>
-        <h2 style = "color: black;text-align: center; font-size:xx-large;">
-        <span style="color:blue">G</span>
-        <span style="color:red">O</span>
-        <span style="color:yellow">O</span>
-        <span style="color:blue">G</span>
-        <span style="color:green">L</span>
-        <span style="color:red">E</span>
+        <h2 style = "color: black;text-align: center; font-size:xx-large;font-family: Product Sans;">
+        <span style="color:blue; font-weight:bold;font-size:60px;font-family: Product Sans;">G</span>
+        <span style="color:red;font-weight:bold;font-size:60px;font-family: Product Sans;">O</span>
+        <span style="color:yellow; font-weight:bold;font-size:60px;font-family: Product Sans;">O</span>
+        <span style="color:blue;font-weight:bold;font-size:60px;font-family: Product Sans;">G</span>
+        <span style="color:green;font-weight:bold;font-size:60px;font-family: Product Sans;">L</span>
+        <span style="color:red;font-weight:bold;font-size:60px;font-family: Product Sans;">E</span>
         <span>&nbsp</span>
-        <span style="color:blue"> J</span>
-        <span style="color:red">O</span>
-        <span style="color:yellow">K</span>
-        <span style="color:blue">E</span>
-        <span style="color:green">S</span>
+        <span style="color:blue;font-weight:bold;font-size:60px;font-family: Product Sans;"> J</span>
+        <span style="color:red;font-weight:bold;font-size:60px;font-family: Product Sans;">O</span>
+        <span style="color:yellow;font-weight:bold;font-size:60px;font-family: Product Sans;">K</span>
+        <span style="color:blue;font-weight:bold;font-size:60px;font-family: Product Sans;">E</span>
+        <span style="color:green;font-weight:bold;font-size:60px;font-family: Product Sans;">S</span>
         </h2>
     </div>
     <br>
     <form method="GET" action="">
-    <div>
-        <div class = "org" style = "display:inline; margin-left:45px; padding: 45px">
-            <label for="selCat" value="Category">Category</label>
-            <select name="category" id="selCat" class = "mui-btn mui-btn--danger" class="input-field" required>
-                <option value="all">All</option>
-                <option value="neutral">Neutral</option>
-                <option value="chuck">Chuck</option>
-            </select>
-        </div>
-        <div class = "org" style = "display:inline; margin-left:45px; padding: 45px">
-            <label for="selLang" value="Language">Language</label>
-            <select name="language" id="selLang" class = "mui-btn mui-btn--danger" class="input-field" required>
-                <option value="en">English</option>
-                <option value="de">German</option>
-                <option value="it">Italian</option>
-                <option value="es">Spanish</option>
-                <option value="gl">Galician</option>
-            </select>
-        </div>
-        <div class = "org" style = "display:inline; margin-left:45px; padding: 45px">
-            <label for="selNum" value="Number">Number</label>
-            <select name="number" id="selNum" class = "mui-btn mui-btn--danger">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </div>
-        <div class = "org" style = "display:inline; margin-left:45px; padding: 45px">
-            <label for="joke_Identifier" value="jokeID">Joke ID</label>
-            <input type="number" class = "mui-btn mui-btn--danger" placeholder = "ID" id="jokeId" min="1" max="1000" step = "1" onclick = "disableSelect()">
-        </div>
+    <div class = "mui-container mui--text-center">
+
+        <label for="selCat" value="Category">Category</label>
+        <select name="category" id="selCat" class = "mui-btn mui-btn--danger" style = "margin:25px;">
+            <option value="all">All</option>
+            <option value="neutral">Neutral</option>
+            <option value="chuck">Chuck</option>
+        </select>
+        <label for="selLang" value="Language">Language</label>
+        <select name="language" id="selLang" class = "mui-btn mui-btn--danger" style = "margin:25px;">
+            <option value="en">English</option>
+            <option value="de">German</option>
+            <option value="it">Italian</option>
+            <option value="es">Spanish</option>
+            <option value="gl">Galician</option>
+        </select>
+        <label for="selNum" value="Number">Number</label>
+        <select name="number" id="selNum" class = "mui-btn mui-btn--danger" style = "margin:25px;">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select>
+    
+        <label for="joke_Identifier" value="jokeID">Joke ID</label>
+        <input type="number" style = "margin:25px;" class = "mui-btn mui-btn--danger" placeholder = "ID" id="jokeId" min="1" max="1000" step = "1" onclick = "disableSelect()">
+
     </div>
     </form>
-        <div>
-            <button id="btnAmuse" value="Tell me a joke" class = "mui-btn mui-btn--primary" style = "width:100%; margin-top:25px;" onclick = "get_joke()">Get Jokes</button>
-        </div>
-        <div>
-            <div id = "response"></div>
-        </div>
+    <div>
+        <button id="btnAmuse" value="Tell me a joke" class = "mui-btn mui-btn--primary" style = "width:100%; margin-top:25px;" onclick = "get_joke()">Get Jokes</button>
+    </div>
+    <div>
+        <div id = "response"></div>
+    </div>
 </body>
 </html>
