--- a/projects/jokes_api/client/index.html
+++ b/projects/jokes_api/client/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
-<body style = "background: rgba(46, 182, 255, 0.2);">
+<body style = "background-image: linear-gradient( 89.7deg, rgba(223,0,0,0.2) 2.7%, rgba(214,91,0,0.2) 15.1%, rgba(233,245,0,0.2) 29.5%, rgba(23,255,17,0.2) 45.8%, rgba(29,255,255,0.2) 61.5%, rgba(5,17,255,0.2) 76.4%, rgba(202,0,253,0.2) 92.4% );">
     <br>
     <div>
         <h2 style = "color: black;text-align: center; font-size:xx-large;font-family: Product Sans;">
